Implement relfilenode tracking for arenadata_toolkit (#1079)
This patch introduces some enhancements to the arenadata_toolkit for the GPDB,
primarily focusing on tracking relfilenode changes. The key
components of this implementation include: tracking API, hooks processing and
background workers to facilitate initialization tasks on both the master and
segment levels. The main concept of implementation is in utilizing Bloom filters
to efficiently track relfilenode changes.

The main purpose of this code is achieving fast database size
calculation and tracking file changes at relation level. The extension
implements a probabilistic tracking system using Bloom filters to monitor file
changes across Greenplum segments. It utilizes shared memory for state
management and employs background workers to maintain consistency. 

The original code of toolkit extension has been reorganized due to increased
logic complexity.  Now extension is built from several units stored in
gpcontrib/arenadata_toolkit/src folder.

Previous code for calculation relation sizes is stored in dbsize.c. New api
functions related to tracking are in track_files.c. Other units are dedicated
to utility purposes providing sustainable infrastructure for extension.

Generally speaking, extension uses storage manager hooks which catch relations
files changes (create, extend, truncate, unlink) via Bloom filter. We use our own
implementation of bloom filter, which is stored in shared memory. Main hash
function used in Bloom filter is an adapted wyhash function for our specific case.

Transactional semantics works as follow. Each bloom filter is allocated with
double arenadata_toolkit.tracking_bloom_size in order to preserve filter state
in case of track acquisition rollback. Each bloom filter is also assigned a
"version" variable, which represents a simple counter. The main
tracking_get_track function takes a version value from master as an argument,
and after function is dispa

--- a/gpcontrib/Makefile
+++ b/gpcontrib/Makefile
@@ -105,4 +105,5 @@ installcheck:
 	$(MAKE) -C gp_subtransaction_overflow installcheck
 	$(MAKE) -C gp_check_functions installcheck
 	$(MAKE) -C arenadata_toolkit installcheck
+	$(MAKE) -C arenadata_toolkit/isolation2 installcheck
 
