[7X] Migrate ADBC dependencies to the base image (#1129)
[7X] Migrate ADBC dependencies to the base image

The ADCC extension's scripts are split in different files due to differences in
dependencies across Linux distributions. This patch adds required dependencies
to the Ubuntu and Rocky Linux images.

Add protobuf-compiler to apt packages and protobuf==3.20.0 python module to base
images for Rocky Linux and Ubuntu.

Ticket: ADBDEV-6757

--- a/arenadata/Dockerfile.ubuntu
+++ b/arenadata/Dockerfile.ubuntu
@@ -14,8 +14,9 @@ RUN set -eux; \
     echo 'precedence ::ffff:0:0/96  100' >> /etc/gai.conf; \
 # Packages for tests
     apt install -y rsync iproute2 fakeroot lsof sudo python3.11 python3.11-dev openjdk-17-jdk libipc-run-perl; \
+    apt install -y protobuf-compiler; \
 # Install allure-behave for behave tests
-    pip3 install pytest gsutil behave~=1.2.6 coverage~=4.5 'mock<=5.0.0' allure-behave==2.4.0; \
+    pip3 install pytest gsutil behave~=1.2.6 coverage~=4.5 'mock<=5.0.0' allure-behave==2.4.0 protobuf==3.20.0; \
     pip3 cache purge
 
 WORKDIR /home/gpadmin
